# EzGitUp

./: README.md  github_uploader.py  pyproject.toml
.github/workflows/: pypi.yml
ezgitup/: __init__.py  uploader.py
