[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ezgitup"
version = "0.1.0"
description = "A simple tool to upload files to GitHub repositories"
readme = "README.md"
requires-python = ">=3.6"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.25.1",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/ezgitup"
"Bug Tracker" = "https://github.com/yourusername/ezgitup/issues"

[project.scripts]
ezgitup = "ezgitup.uploader:main" 